--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <script src="site_libs/header-attrs-2.17/header-attrs.js"></script>
 <script src="site_libs/jquery-3.6.0/jquery-3.6.0.min.js"></script>
 <meta name="viewport" content="width=device-width, initial-scale=1" />
-<link href="site_libs/bootstrap-3.3.5/css/cerulean.min.css" rel="stylesheet" />
+<link href="site_libs/bootstrap-3.3.5/css/flatly.min.css" rel="stylesheet" />
 <script src="site_libs/bootstrap-3.3.5/js/bootstrap.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/html5shiv.min.js"></script>
 <script src="site_libs/bootstrap-3.3.5/shim/respond.min.js"></script>
@@ -33,6 +33,7 @@
 <link href="site_libs/tocify-1.9.1/jquery.tocify.css" rel="stylesheet" />
 <script src="site_libs/tocify-1.9.1/jquery.tocify.js"></script>
 <script src="site_libs/navigation-1.1/tabsets.js"></script>
+<script src="site_libs/navigation-1.1/codefolding.js"></script>
 <link href="site_libs/highlightjs-9.12.0/default.css" rel="stylesheet" />
 <script src="site_libs/highlightjs-9.12.0/highlight.js"></script>
 <link href="site_libs/font-awesome-5.1.0/css/all.css" rel="stylesheet" />
@@ -221,6 +222,9 @@ $(document).ready(function () {
 </style>
 
 <!-- code folding -->
+<style type="text/css">
+.code-folding-btn { margin-bottom: 4px; }
+</style>
 
 
 
@@ -345,6 +349,14 @@ div.tocify {
 
 <div id="header">
 
+<div class="btn-group pull-right float-right">
+<button type="button" class="btn btn-default btn-xs btn-secondary btn-sm dropdown-toggle" data-toggle="dropdown" data-bs-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><span>Code</span> <span class="caret"></span></button>
+<ul class="dropdown-menu dropdown-menu-right" style="min-width: 50px;">
+<li><a id="rmd-show-all-code" href="#">Show All Code</a></li>
+<li><a id="rmd-hide-all-code" href="#">Hide All Code</a></li>
+</ul>
+</div>
+
 
 
 <h1 class="title toc-ignore">My awesome website</h1>
@@ -362,8 +374,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h1>Here’s a subsection</h1>
 <p>And here’s some addition text …</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1]  0.13008822  0.43668111 -0.41187107  1.22676540 -0.06781324 -0.62569141
-##  [7] -0.13355424  0.80956689  1.43378903  0.94672009</code></pre>
+<pre><code>##  [1] -0.7449747 -0.4466648 -0.8014004 -1.4324656  0.2905994 -0.6890451
+##  [7] -0.2915537 -0.9886511 -0.1279222  1.8020309</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level1">
 <h1>Links to other websites</h1>
@@ -376,8 +388,23 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <div id="local-image-pick-in-repository" class="section level1">
 <h1>Local image (pick in repository)</h1>
 <p>Here’s my cat, ted:</p>
+<p><img src="images/ted.jpeg" style="width:75%"></p>
 <p><img src="images/ted.jpeg" /> # Link to page w/in the site</p>
 <p><a href="about.html">About me</a></p>
+<div id="quarterly-rseults" class="section level2 tabset">
+<h2 class="tabset">Quarterly Rseults</h2>
+<div id="by-product" class="section level3">
+<h3>By product</h3>
+<p>my first tab</p>
+</div>
+<div id="by-regions" class="section level3">
+<h3>By regions</h3>
+</div>
+</div>
+<div id="this-is-a-new-section" class="section level2">
+<h2>this is a new section</h2>
+<p>new</p>
+</div>
 </div>
 
 
@@ -415,6 +442,11 @@ $(document).ready(function () {
 </script>
 
 <!-- code folding -->
+<script>
+$(document).ready(function () {
+  window.initializeCodeFolding("hide" === "show");
+});
+</script>
 
 <script>
 $(document).ready(function ()  {
