--- a/index.html
+++ b/index.html
@@ -331,6 +331,9 @@ div.tocify {
   <a href="about.html">About</a>
 </li>
 <li>
+  <a href="plotly.html">Plotly</a>
+</li>
+<li>
   <a href="mailto:&lt;jangrace009@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -374,8 +377,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h1>Here’s a subsection</h1>
 <p>And here’s some addition text …</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1] -0.7449747 -0.4466648 -0.8014004 -1.4324656  0.2905994 -0.6890451
-##  [7] -0.2915537 -0.9886511 -0.1279222  1.8020309</code></pre>
+<pre><code>##  [1] -0.2973523 -0.6301242  0.2986504 -0.6146395  0.4135839 -0.1674253
+##  [7]  1.4785376  0.5801791 -2.6394306  1.0357602</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level1">
 <h1>Links to other websites</h1>
