--- a/index.html
+++ b/index.html
@@ -334,6 +334,9 @@ div.tocify {
   <a href="plotly.html">Plotly</a>
 </li>
 <li>
+  <a href="dashboard.html">Dashboard</a>
+</li>
+<li>
   <a href="mailto:&lt;jangrace009@gmail.com&gt;">
     <span class="fa fa-envelope fa-lg"></span>
      
@@ -377,8 +380,8 @@ src="https://media.giphy.com/media/drXGoW1iudhKw/giphy.gif" /></p>
 <h1>Here’s a subsection</h1>
 <p>And here’s some addition text …</p>
 <pre class="r"><code>rnorm(10)</code></pre>
-<pre><code>##  [1] -0.2973523 -0.6301242  0.2986504 -0.6146395  0.4135839 -0.1674253
-##  [7]  1.4785376  0.5801791 -2.6394306  1.0357602</code></pre>
+<pre><code>##  [1] -0.3350743  1.0759002 -1.5421629 -0.8799838  2.1621997  0.0257528
+##  [7] -0.9825139 -0.9974228  1.2325210  1.8067351</code></pre>
 </div>
 <div id="links-to-other-websites" class="section level1">
 <h1>Links to other websites</h1>
